# ross

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  BearingElement6DoF.toml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE.md  MANIFEST.in  PAPADOPOULOS_c.mat  README.md  api_report  appveyor.yml  bearing_seal_element.py  c-123701.ipynb  data.pickle  deploy_docs.sh  deploy_key.enc  disk_element.py  draft.py  main.py  materials.py  new_matrices.mat.mat  probe.py  probeclass.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  shaft_element  shaft_element.py  test_conec.py  (+4 more)
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml  test.yml  windows-interface-and-docs.yml
API_Report/: Report.py
API_Report/templates/: report.html
Benchmarks/cProfile/: Benchmark_Campbell_diagram.py  Benchmark_Freq_response.py  Benchmark_Static_analysis.py
apps/: README_INTERFACE.md  app.py  requirements.txt  ross_interface.spec
apps/frontend/: app.js  index.html  style.css  style_teste.css
apps/src/: app.js  index.html  server.py  style.css
apps/tests/: test_server.py
doc/: Rotordynamics-ross (4) (19).xml  conf.py  git_configuration.rst  index.rst
docs/: .buildinfo  Makefile  UML_diagram.xml  api.html  api.rst  citing.rst  conf.py  contributing.md  contributing.rst  download.rst  examples.rst  genindex.html  git_configuration.html  git_configuration.rst  index.html  index.md  index.rst  installation.rst  introduction.rst  make.bat  objects.inv  py-modindex.html  references.bib  refs.bib  release_notes.rst  requirements.txt  run_notebooks.py  search.html  searchindex.js  tutorial.html  tutorial.rst  tutorials.rst
docs/_modules/: index.html
docs/_sources/: tutorial.rst.txt
docs/_static/: custom.css  custom.js  style.css
docs/_templates/: layout.html
docs/cookbook/: README.md  bearings_advanced.md  building_rotors.md  campbell_diagram.md  critical_speed.md  faults.md  frequency_response.md  gotchas.md  modal_analysis.md  static_analysis.md  (+3 more)
kalman_filter/: Rotor_kalman_filter_v1.ipynb
paper/: paper.bib  paper.md
ross/: Campbell_diagram.html  __init__.py  api_report  api_report.py  available_materials.json  available_materials.toml  bearing_seal_element.py  config.py  conftest.py  coupling_element.py  disk_element.py  element.py  gear_element.py  gear_mesh.py  gear_mesh_TVMS.py  harmonic_balance.py  materials.py  model_reduction.py  motor_element.py  motor_sourceAC.py  multi_rotor.py  multi_rotor_TVMS.py  new_units.txt  plot_freq_response.html  plotly_theme.py  point_mass.py  probe.py  report.py  resonator_element.py  results.py  rotor.html  rotor_assembly.py  rotor_convergence.py  shaft_element.py  static.html  template.html  test_bearing_seal_element.py  test_disk_element.py  test_shaft_element.py  units.py  (+1 more)
tools/: generate_comparison_plots.py
(+322 files in other folders)
